docs/pages/versions/v57.0.0/sdk/ui/universal/index.mdx
---
title: Universal
sidebar_title: Overview
description: Cross-platform components for building shared UIs across Android, iOS, and web with @expo/ui.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'web', 'expo-go']
hideTOC: true
---

import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';

The universal components in `@expo/ui` are a single-API layer over the platform-native UI toolkits. On Android, they delegate to [`@expo/ui/jetpack-compose`](../jetpack-compose). On iOS, they delegate to [`@expo/ui/swift-ui`](../swift-ui). On web, they're JS implementations using `react-dom` or `react-native-web` and are picked per component to suit the control.

## Installation

<APIInstallSection />

## Usage

Universal components must still be wrapped in a [`Host`](host), but you import everything, including `Host`, from the package root. The universal `Host` dispatches to the platform-native host on Android and iOS, so there's no need to reach for [`@expo/ui/swift-ui`](../swift-ui) or [`@expo/ui/jetpack-compose`](../jetpack-compose) directly.

<ComponentExample
  title="UniversalExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/universal-index-basic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-index-basic-android-dark.webp',
    alt: 'A Hello world label above a filled Material 3 button',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/universal-index-basic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/universal-index-basic-ios-dark.webp',
    alt: 'A Hello world label above a filled button',
  }}>

```tsx
import { useColorScheme } from 'react-native';
import { Host, Column, Button, Text } from '@expo/ui';

export default function Example() {
  const colorScheme = useColorScheme();

  return (
    <Host style={{ flex: 1 }}>
      <Column spacing={12} alignment="center">
        <Text textStyle={{ color: colorScheme === 'dark' ? '#FFFFFF' : '#000000' }}>
          Hello, world!
        </Text>
        <Button label="Press me" onPress={() => alert('Pressed')} />
      </Column>
    </Host>
  );
}
```

</ComponentExample>

## Components

| Component                    | Description                                                                                               |
| ---------------------------- | --------------------------------------------------------------------------------------------------------- |
| [`BottomSheet`](bottomsheet) | A modal sheet that slides up from the bottom of the screen.                                               |
| [`Button`](button)           | A pressable button with multiple visual variants.                                                         |
| [`Checkbox`](checkbox)       | A toggle control that represents a checked or unchecked state.                                            |
| [`Collapsible`](collapsible) | A labelled tappable header that toggles visibility of its content.                                        |
| [`Column`](column)           | A vertical layout container for universal @expo/ui components.                                            |
| [`FieldGroup`](fieldgroup)   | A scrollable container of grouped settings-style rows.                                                    |
| [`Host`](host)               | A cross-platform Host component that wraps universal @expo/ui content.                                    |
| [`Icon`](icon)               | A platform-native icon — SF Symbol on iOS, Material Symbol on Android.                                    |
| [`List`](list)               | A virtualized vertical container of rows, paired with a tappable ListItem primitive.                      |
| [`Picker`](picker)           | A single-selection input with menu and wheel appearances.                                                 |
| [`RNHostView`](rnhostview)   | A cross-platform component for hosting React Native views inside @expo/ui views.                          |
| [`Row`](row)                 | A horizontal layout container for universal @expo/ui components.                                          |
| [`ScrollView`](scrollview)   | A scrollable container that supports vertical or horizontal scrolling.                                    |
| [`Slider`](slider)           | A control for selecting a value from a continuous or stepped range.                                       |
| [`Spacer`](spacer)           | A layout spacer that produces empty space between siblings.                                               |
| [`Switch`](switch)           | A toggle control that switches between on and off states.                                                 |
| [`Text`](text)               | A component for displaying styled text content.                                                           |
| [`TextInput`](textinput)     | A text input backed by native SwiftUI and Jetpack Compose components, with a React Native-compatible API. |

## When to use this versus `swift-ui` / `jetpack-compose`

- Reach for **universal** components when you want one component tree that runs unmodified on Android, iOS, and web. The platform-native look and feel is preserved on Android and iOS because the components delegate to Jetpack Compose/SwiftUI under the hood.
- Reach for **[`@expo/ui/swift-ui`](../swift-ui)** or **[`@expo/ui/jetpack-compose`](../jetpack-compose)** directly when you need platform-specific controls, modifiers, or behavior that the universal API doesn't surface.
